Fixed subnav spacing

--- a/web/themes/custom/tallgrasschurch/css/tallgrasschurch.css
+++ b/web/themes/custom/tallgrasschurch/css/tallgrasschurch.css
@@ -1831,15 +1831,9 @@ form .preview {
 }
 
 #block-tallgrasschurch-subnav {
-  margin: 20px 0;
+  margin: -80px 0 80px;
   background-color: white;
   border-bottom: 1px solid #ddd;
-}
-
-@media (min-width: 576px) {
-  #block-tallgrasschurch-subnav {
-    margin: -80px 0 80px;
-  }
 }
 
 #block-tallgrasschurch-subnav ul {
